--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-rating-star-with-type": "^1.2.1",
+    "react-rating-stars-component": "^2.2.0",
+    "react-router": "^6.18.0",
+    "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "react-simple-star-rating": "^5.1.7",
     "react-stars": "^2.2.5",
@@ -41,5 +44,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "author": "",
+  "license": "ISC"
 }
